테스트코드 오류 클래스 DELETE 및 디스코드 웹훅 더미데이터 추가

--- a/main-server/src/test/resources/application-test.yml
+++ b/main-server/src/test/resources/application-test.yml
@@ -30,6 +30,10 @@ logging:
     org.hibernate: WARN
     org.springframework.transaction: WARN
 
+# Discord 테스트 설정
+discord:
+  webhook-url: "https://discord.com/api/webhooks/test/test"
+
 # 테스트 전용 설정
 test:
   integration:
