외부 퀴즈 API 설정 및 엔티티 업데이트
- application.yml: 외부 퀴즈 API URL 및 서비스키 설정 추가
- Quiz 엔티티: 필요한 필드 및 메서드 업데이트

--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -39,6 +39,12 @@ jwt:
   refresh-token:
     expiration: 1209600000 # 14일
 
+# 퀴즈 API 설정
+external:
+  quiz:
+    api:
+      service-key: ${QUIZ_API_SERVICE_KEY}
+
 # 뉴스 API 설정
 news:
   policy-briefing:
